--- a/app/src/main/res/layout/recyclerview_item_first_type.xml
+++ b/app/src/main/res/layout/recyclerview_item_first_type.xml
@@ -1,7 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
+              android:orientation="horizontal"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
+    <ImageView
+        android:layout_width="160dp"
+        android:layout_height="90dp"
+        android:scaleType="centerCrop"
+        android:layout_marginRight="18dp"
+        android:id="@+id/imageView"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:textColor="@android:color/black"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/textView"/>
 </LinearLayout>
