--- a/app/src/main/res/layout/recyclerview_item_second_type.xml
+++ b/app/src/main/res/layout/recyclerview_item_second_type.xml
@@ -4,4 +4,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:id="@+id/textView"/>
 </LinearLayout>
