--- a/app/src/main/res/layout/recyclerview_item_third_type.xml
+++ b/app/src/main/res/layout/recyclerview_item_third_type.xml
@@ -4,4 +4,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:id="@+id/seekBar"/>
 </LinearLayout>
