--- a/app/src/main/res/layout/recyclerview_item_first_type.xml
+++ b/app/src/main/res/layout/recyclerview_item_first_type.xml
@@ -5,9 +5,9 @@
               android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="160dp"
-        android:layout_height="90dp"
-        android:scaleType="centerCrop"
+        android:layout_width="200dp"
+        android:layout_height="240dp"
+        android:scaleType="centerInside"
         android:layout_marginRight="18dp"
         android:id="@+id/imageView"/>
 
@@ -17,5 +17,6 @@
         android:text="New Text"
         android:textColor="@android:color/black"
         android:layout_gravity="center_vertical"
+        android:textSize="24sp"
         android:id="@+id/textView"/>
 </LinearLayout>
