--- a/app/src/main/res/layout/recyclerview_item_second_type.xml
+++ b/app/src/main/res/layout/recyclerview_item_second_type.xml
@@ -11,5 +11,9 @@
         android:textColor="@android:color/black"
         android:textStyle="bold"
         android:textSize="18sp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:id="@+id/textView"/>
 </LinearLayout>
