--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,19 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".MainActivity">
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:scrollbars="vertical"
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</RelativeLayout>
+        android:layout_height="48dp"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:paddingRight="8dp"
+        android:paddingLeft="8dp"
+        android:gravity="center_vertical"
+        android:background="#d2d2d2"
+        android:layout_marginBottom="6dp"
+        android:text="Multiple view type"
+        android:id="@+id/multipleViewTypeTextView"/>
+</LinearLayout>
